--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 			<script src="precompiler.js"></script>
 			<script type="text/javascript">
 				$.get('template.tp').then(function(result) {
-					tempart.parse(result);
+					console.log(tempart.parse(result));
 				});
 			</script>
 
