[parser] tried to implement tree

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 		<title>Tempart</title>
 			<script src="jquery.min.js"></script>
 
-			<script src="precompiler.js"></script>
-			<script src="precompiler.js"></script>
+			<script src="parser.js"></script>
+			<script src="compiler.js"></script>
 			<script type="text/javascript">
 				$.get('template.tp').then(function(result) {
 					console.log(tempart.parse(result));
